--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "audio": "https://github.com/rafaelsq/audio",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "bulma": "^0.7.4",
@@ -7,6 +8,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "node-sass": "^4.9.0"
+    "node-sass": "^4.9.0",
+    "sass": "^1.20.1"
   }
 }
